--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
-    <script src="script.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button class="">Choose a new grid size</button>
     <div class="gridContainer"></div>
-
+    <script src="script.js"></script>
 </body>
 </html>
