--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button class="">Choose a new grid size</button>
+    <button class="resetButton">Choose a new grid size</button>
     <div class="gridContainer"></div>
     <script src="script.js"></script>
 </body>
